cganged controller GET /practice/{id} for input shuffled list